--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,4 +5,16 @@ page-home {
         font-size: 16px;
         font-weight: bold;
     }
+    .status {
+        font-weight: bold;
+        text-align: center;
+    }
+    .title {
+
+        font-weight: bold;
+       
+    }
+    .card {
+        background: #d1d1d1;
+    }
 }
