--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,4 +17,13 @@ page-home {
     .card {
         background: #d1d1d1;
     }
+    .swiper-pagination.swiper-pagination-clickable.swiper-pagination-bullets{
+        margin-bottom:40px;
+    }
+    .teste1{
+        background:red;
+    }
+    .teste2{
+        background:green;
+    }
 }
