--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,6 +36,7 @@ $app-direction: ltr;
 $colors: (
   primary:    #488aff,
   secondary:  #007979,
+  toogle:    green,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
